linked pages and .js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -9,12 +9,12 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="linkhw19pages"> <img src="../images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="../images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a class="active" href="#about">  About  </a>
-      <a href="linkhw19pages"> Work  </a>
+      <a href="https://brittlerattle.github.io/UXUI_HW18/mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
-      <a href="linkhw19pages">Skills</a>
+      <a href="https://brittlerattle.github.io/UXUI_HW18/skills.html">Skills</a>
     </div>
   </div>
 </div>
@@ -30,5 +30,11 @@
     <button class="b3"></button>
   </div>
 </div>
+
+
+    <!-- Add the script tag to jQuery below. -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/index.js"></script>
+    
 </body>
 </html>
