--- a/mywork.html
+++ b/mywork.html
@@ -12,12 +12,12 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="linkhw19pages"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
-      <a class="active" href="mywork.html"> Work  </a>
+      <a class="active" href="https://brittlerattle.github.io/UXUI_HW18/mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
-      <a href="skills.html">Skills</a>
+      <a href="https://brittlerattle.github.io/UXUI_HW18/skills.html">Skills</a>
     </div>
   </div>
 </div>
