--- a/skills.html
+++ b/skills.html
@@ -12,10 +12,10 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="../UXUI_HW17/index.html"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
-      <a href="mywork.html"> Work  </a>
+      <a href="#mywork"> Work  </a>
       <a href="#contact"> Contact </a>
       <a class="active"  href="#skills">Skills</a>
     </div>
