--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
     <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="../images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
-      <a class="active" href="#about">  About  </a>
+      <a href="#about">  About  </a>
       <a href="https://brittlerattle.github.io/UXUI_HW18/mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
       <a href="https://brittlerattle.github.io/UXUI_HW18/skills.html">Skills</a>
@@ -20,7 +20,12 @@
 </div>
 
 <!--body stuff-->
-<img class="hero" src="images/hero.png">
+
+  <div class="sidebarHero"></div>
+  <img class="back" src="images/splash images/behind guy.png">
+  <img class="front" src="images/splash images/front guy.png">
+  <a href="https://brittlerattle.github.io/UXUI_HW18/mywork.html"> <img class="bubble" src="images/splash images/bubble.png"></a>
+
 
 <div class="footer">
   <div class="copyright">Copyright Andrew Bell 2021</div>
