--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="../images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
       <a href="https://brittlerattle.github.io/UXUI_HW18/mywork.html"> Work  </a>
