--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
     <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
-      <a href="#mywork"> Work  </a>
+      <a href="https://brittlerattle.github.io/UXUI_HW19/mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
       <a class="active"  href="#skills">Skills</a>
     </div>
