--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="https://brittlerattle.github.io/UXUI_WK19/"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="index.html"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
-      <a href="https://brittlerattle.github.io/UXUI_HW19/mywork.html"> Work  </a>
+      <a href="mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
-      <a href="https://brittlerattle.github.io/UXUI_HW19/skills.html">Skills</a>
+      <a href="skills.html">Skills</a>
     </div>
   </div>
 </div>
@@ -24,7 +24,7 @@
   <div class="sidebarHero"></div>
   <img class="back" src="images/splash images/behind guy.png">
   <img class="front" src="images/splash images/front guy.png">
-  <a href="https://brittlerattle.github.io/UXUI_HW19/mywork.html"> <img class="bubble" src="images/splash images/bubble.png"></a>
+  <a href="mywork.html"> <img class="bubble" src="images/splash images/bubble.png"></a>
 
 
 <div class="footer">
