--- a/mywork.html
+++ b/mywork.html
@@ -5,7 +5,7 @@
   letter-spacing: -1px;
 }
 </style>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!--header html-->
