--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
 <div class="headerHolder">
   <div class="header">
 
-    <a href="index.html"> <img src="/images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
+    <a href="index.html"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
       <a href="#about">  About  </a>
       <a href="mywork.html"> Work  </a>
