--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <!--body stuff-->
 
   <div class="sidebarHero"></div>
-  <img class="back" src="images/splash images/behind guy.png">
-  <img class="front" src="images/splash images/front guy.png">
-  <a href="mywork.html"> <img class="bubble" src="images/splash images/bubble.png"></a>
+  <img class="back" src="images/splash images/fastback.png">
+  <img class="front" src="images/splash images/fastfront.png">
+  <a href="mywork.html"> <img class="bubble" src="images/splash images/fastbubble.png"></a>
 
 
 <div class="footer">
