--- a/skills.html
+++ b/skills.html
@@ -46,9 +46,9 @@
 <div class="container">
   <div class="skills-image-one"></div>
   <div class="tallimage2"></div>
-  <div class="skillscopy"><div class= orangeHeadline>Skills in Practice</div>
+  <div class="skillscopy"><div class= orangeHeadline>Skills in Practice<br></div>
     <div class="whiteonGray">
-    Snappy copy about contacting stakeholders, finding good interview canditates, iterating until due date, interaction testing.<br><br>
+    <br>Snappy copy about contacting stakeholders, finding good interview canditates, iterating until due date, interaction testing.<br><br>
     More copy about soft skills. Dealing with photographers and clients, service industry, logo design, painting and illustration.
   </div></div>
 </div>
