--- a/mywork.html
+++ b/mywork.html
@@ -29,7 +29,7 @@
 </div>
 <!--a-tags in flexbox (put css bg image in head)-->
 <div class="workContainer">
-  <a href="#smt"><div class="workLink1"><span><h1>Sailda Mountain Trails</h1></span></div></a>
+  <a href="smt.html"><div class="workLink1"><span><h1>Sailda Mountain Trails</h1></span><div class="smtcardcap">Go To Case Study</div></div></a>
   <a href="#FCC"><div class="workLink2"><span><h1>FCC Redesign</h1></span></div></a>
   <a href="#Homegrown"><div class="workLink3"><span><h1>Homegrown Plant Care App</h1></span></div></a>
 
