bootstraps for all smt case study pages

--- a/smt3.html
+++ b/smt3.html
@@ -31,23 +31,27 @@
   <body>
     <div class="sidebar smtbar">
         <br><br><h1>Salida Mountain Trails</h1>
-        <img src="images/mainImage.gif" width="250px"><br><br>
-        <p class="sidebarcopy">
-            Salida Mountain Trails is a great non-profit with a mission that was easy to get behind. But like many non-profits, SMT devotes most of their time and money to solving problems bigger than website usability— that’s where my team came in.
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br>
+        <p>
+          It was also abundantly clear that a site can be iterated, improved upon and tested for months, so it was bittersweet to have to pass it off with such a quick turnaround.
+
             </p>
            
       </div>
       <div class="jumbotron">
-  <h1 class="display-4">Redesign Overview</h1>
-  <p class="lead">My role in the redesign was mainly research and prototype design, though I played a role in each step at some level. Early on I used the cycling tracker, Strava, to target mountain bikers living in Salida, to understand how local users feel about the organization and it’s trails. I also leveraged cyclist friends on Instagram for one-on-one user interviews.<br><br>
-    When the time came to start prototyping, I rebuilt the logo using Adobe Illustrator and Photoshop and built and tested using Figma. The team used Google Fonts to find fonts that would be available to all that would fit the new aesthetic. Figjam was used to build an empathy map, leverage card sorting and formulate a site map.
+  <h1 class="display-4">Define Phase</h1>
+  <p class="lead">We needed to help users by providing reliable resources and easier ways to support the community they love. This would improve overall experience and further connect users with the people who made it happen.
+<br><h3>Our Problem Statement was central to this plan:</h3>
+</p><img src="images/define.png" class="empathyimage">
+  <hr class="my-4">
+  <p class="lead">
+We developed a Journey Map showing users being compelled to get involved through trail usage and a delightful website experience. The Journey map, paired with “How Might We?” questions and quantitative data from interviews and surveys, helped us determine the order and scope of the Get Involved portion of the website.
 </p>
   
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg  btn-back" href="#" role="button"><</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">></a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt2.html" role="button"><</a>
+  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg mainbutt" href="#" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
+  <a class="btn btn-primary btn-lg btn-back" href="smt4.html" role="button">></a>
 </div>
           <div class="footer">
             <div class="copyright">Copyright Andrew Bell 2021</div>
