--- a/smt5.html
+++ b/smt5.html
@@ -29,26 +29,30 @@
 
 
   <body>
-    <div class="sidebar smtbar">
-        <br><br><h1>Salida Mountain Trails</h1>
-        <img src="images/mainImage.gif" width="250px"><br><br>
-        <p class="sidebarcopy">
-            Salida Mountain Trails is a great non-profit with a mission that was easy to get behind. But like many non-profits, SMT devotes most of their time and money to solving problems bigger than website usability— that’s where my team came in.
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            </p>
-           
+    <div class="sidebar smtbar protobar">
+        <br><br><h1 class="sidebardbg">Salida Mountain Trails</h1>
       </div>
-      <div class="jumbotron">
-  <h1 class="display-4">Redesign Overview</h1>
-  <p class="lead">My role in the redesign was mainly research and prototype design, though I played a role in each step at some level. Early on I used the cycling tracker, Strava, to target mountain bikers living in Salida, to understand how local users feel about the organization and it’s trails. I also leveraged cyclist friends on Instagram for one-on-one user interviews.<br><br>
-    When the time came to start prototyping, I rebuilt the logo using Adobe Illustrator and Photoshop and built and tested using Figma. The team used Google Fonts to find fonts that would be available to all that would fit the new aesthetic. Figjam was used to build an empathy map, leverage card sorting and formulate a site map.
+
+
+<div class="jumbotron">
+  <h1 class="display-4">Prototype</h1>
+  <div class="card pcard">
+    <img src="images/ptype.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Final Wireframe</h5>
+      <p class="card-text">Though the design was iterated on many times, the final wireframe can be seen here.</p>
+      <a href="https://www.figma.com/file/DShnfpiYoLvGL7691CgLne/SMT-desktop" target="_blank" class="btn btn-primary">Goto Wireframe!</a>
+    </div></div>
+<p class="lead">Both mobile and browser-based RWD prototypes were built. The prototypes followed the site maps and user flows developed in the Ideate phase that directly confronted the issues discovered in our empathy phase. Prototypes included interactions and overlays to feel intuitive and make the best use of screen real estate.
+
 </p>
   
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg  btn-back" href="#" role="button"><</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">></a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt4.html" role="button"><</a>
+  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg mainbutt" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
+  <a class="btn btn-primary btn-lg" href="smt6.html" role="button">></a>
 </div>
+
           <div class="footer">
             <div class="copyright">Copyright Andrew Bell 2021</div>
             <div class="footer-right">
