--- a/mywork.html
+++ b/mywork.html
@@ -24,12 +24,16 @@
 <!--body-->
 <div class="sidebar"><br><br>
 <h1>My Work</h1>
-<p>about page interaction, quick overviews of each. <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<p>
+  Andy Bell is a Denver-based UX/UI designer with a passion for solving problems and a flare for visual design.
+  <BR><BR>
+  All work was done for The University of Denver UX/UI program. Click a link to see the Case study, Wireframes and Working Prototype.
+    
 </p>
 </div>
 <!--a-tags in flexbox (put css bg image in head)-->
 <div class="workContainer">
-  <a href="smt.html"><div class="workLink1"><span><h1>Sailda Mountain Trails</h1></span><div class="smtcardcap">Go To Case Study</div></div></a>
+  <a href="smt.html"><div class="workLink1"><span><h1>Sailda Mountain Trails</h1></span><div class="smtcardcap">SEE CASE STUDY</div></div></a>
   <a href="#FCC"><div class="workLink2"><span><h1>FCC Redesign</h1></span></div></a>
   <a href="#Homegrown"><div class="workLink3"><span><h1>Homegrown Plant Care App</h1></span></div></a>
 
