fixed jumbotron height and padding

--- a/smt.html
+++ b/smt.html
@@ -38,7 +38,7 @@
             </p>
            
       </div>
-      <div class="jumbotron">
+      <div class="jumbotron shortTron">
   <h1 class="display-4">Redesign Overview</h1>
   <p class="lead">My role in the redesign was mainly research and prototype design, though I played a role in each step at some level. Early on I used the cycling tracker, Strava, to target mountain bikers living in Salida, to understand how local users feel about the organization and it’s trails. I also leveraged cyclist friends on Instagram for one-on-one user interviews.<br><br>
     When the time came to start prototyping, I rebuilt the logo using Adobe Illustrator and Photoshop and built and tested using Figma. The team used Google Fonts to find fonts that would be available to all that would fit the new aesthetic. Figjam was used to build an empathy map, leverage card sorting and formulate a site map.
