--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
 
 
 <div class="sidebar">
-  <br><br><h1>User Experience and Interface Skills</h1>
+  <br><br><h1>UX/UI Skills</h1>
   <ul>
     <li>Proficiency in UX/UI design and prototyping tools
       with Expertise in Figma and Adobe XD</li>
