--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Roboto:wght@300;400&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <style>h1 {
     letter-spacing: -1px;
   }
