--- a/mywork.html
+++ b/mywork.html
@@ -36,9 +36,10 @@
 </div>
 <!--a-tags in flexbox (put css bg image in head)-->
 <div class="workContainer">
-  <a href="smt.html"><div class="workLink1"><span><h1>Sailda Mountain Trails</h1></span><div class="smtcardcap">SEE CASE STUDY</div></div></a>
-  <a href="#FCC"><div class="workLink2"><span><h1>FCC Redesign</h1></span></div></a>
-  <a href="#Homegrown"><div class="workLink3"><span><h1>Homegrown Plant Care App</h1></span></div></a>
+  <a href="madplanet.html"><div class="workLink3"></div><span><h3 class="blackFont">madPLANET Mobile Shopping App</h1></span></a>
+  <a href="smt.html"><div class="workLink1"></div><span><h3 class="blackFont">SMT non-profit Redesign</h1></span></a>
+  <a href="#FCC"><div class="workLink2"></div><span><h3 class="blackFont">FCC Website Redesign</h1></span></a>
+  
 
 </div>
 <div class="footer">
