--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
 
     <a href="index.html"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
-      <a href="#about">  About  </a>
+      <a href="about.html">  About  </a>
       <a href="mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
       <a class="active"  href="#skills">Skills</a>
@@ -51,8 +51,12 @@
   <div class="tallimage2"></div>
   <div class="skillscopy"><div class= orangeHeadline>Skills in Practice<br></div>
     <div class="whiteonGray">
-    <br>Snappy copy about contacting stakeholders, finding good interview canditates, iterating until due date, interaction testing.<br><br>
-    More copy about soft skills. Dealing with photographers and clients, service industry, logo design, painting and illustration.
+    <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due. And was excited every step of the way, from brainstorming to presentation.
+<br><br>
+    As a photo and video processor, attention to detail and time management was essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
+    <br><br>
+    Before my time in the Photography field (and well before I even knew what UX/UI was) I managed a busy restaurant where I learned how important usability was for speed, quality and consistency. I devoted constant attention to the workflow on the Point of Sale systems to alway be as quick and user-friendly, no matter how the menu evolved. I was in frequent communication with the whole staff to make sure everything worked as they expected.
+    <br><br><br><br><br><br>
   </div></div>
 </div>
 <div class="footer">
