--- a/madplanet.html
+++ b/madplanet.html
@@ -43,7 +43,7 @@
             </p>
            
       </div>
-      <div class="jumbotron shortTron">
+      <div class="jumbotron">
   <h1 class="display-4">App Overview</h1>
   <p class="lead">madPLANET was an app designed with the idea that users shouldn’t have to choose between a budget and doing the Right Thing. Our team set out to build an app that allowed users more control over where their dollars were going, by learning about each individual user’s ethical needs. The app would set up a Planet Profile and recommend products accordingly.
 
@@ -51,7 +51,7 @@
     <br><br>My role in the UX portion of the app development was mainly focused on User Research through in-person interviews. The data was compiled and leveraged into Affinity Diagrams and used to create a robust User Persona.
     <br><br>
     In the UI development, in addition to developing the main shopping, profile and checkout modules, I was tasked with styling the app’s colors, iconography and interactions.
-    
+    <br><br>
 </p>
   
 </div>
