--- a/skills.html
+++ b/skills.html
@@ -39,7 +39,7 @@
       <li>Interaction Design</li>
       <li>Proficiency in Adobe Creative Suite with Expertise in
         Photoshop, Lightroom and Premiere</li>
-        <li>Proficiency in CSS, HTML and Various Content
+        <li>Proficiency in CSS, JavaScript, HTML and Various Content
           Management Systems</li>
           <li>Proficiency in Mac and Windows platforms
             Advanced knowledge of computer hardware and
@@ -55,7 +55,7 @@
 <br><br>
     As a photo and video processor, attention to detail and time management was essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
     <br><br>
-    Before my time in the Photography field (and well before I even knew what UX/UI was) I managed a busy restaurant where I learned how important usability was for speed, quality and consistency. I devoted constant attention to the workflow on the Point of Sale systems to alway be as quick and user-friendly, no matter how the menu evolved. I was in frequent communication with the whole staff to make sure everything worked as they expected.
+    Before my time in the Photography field (and well before I even knew what UX/UI was) I managed a busy restaurant where I learned how important usability was for speed, quality and consistency. I devoted constant attention to the workflow on the Point of Sale systems to be quick and user-friendly, no matter how the menu evolved. I was in frequent communication with the whole staff to source ideas for improvement, and make sure everything worked as they expected with each iteration.
     <br><br><br><br><br><br>
   </div></div>
 </div>
