--- a/about.html
+++ b/about.html
@@ -46,8 +46,9 @@
 <br><br>
       After school, I earned a living doing freelance logo design, photo editing and some print design. Not long after,  a one-time wedding processing gig turned into a full time contract, and I found myself in that role for the next 7 years.
       <br><br>
-      When the COVID-19 pandemic canceled every wedding for the season, I used the downtime to assess what my true career goals were, and realized that as much as I loved working with photographers; optimizing workflow and solving design problems was what I most loved about creative work. Looking to find something that would better satisfy my strengths, I was recommended to check out UX/UI by a developer friend who was familiar with my talents, and soon after, I enrolled in a UX/UI Bootcamp at The University of Denver.
+      When the COVID-19 pandemic canceled every wedding for the season, I used the downtime to assess what my true career goals were, and realized that as much as I loved working with photographers; creating from scratch, optimizing workflow and solving design problems was what truly made me happy. Looking to find something that would better satisfy my strengths, I was recommended to check out UX/UI by a developer friend who was familiar with my talents, and soon after, I enrolled in a UX/UI Bootcamp at The University of Denver.
       <br><br>
+      I love cycling (Road and Mountain Bike), making music, and spending an evening being creative with the family.
     
     <br><br><br><br><br><br><br><br>
   </div></div>
