--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <div class="sidebar">
   <br><br><h1> About Me:</h1>
  
-  <br>Denver-based UX/UI designer with a passion for solving problems and a flare for visual design. I became interested in UX/UI during my time as a video and photo processor; when my focus on the  productivity of my creative software brought me to a point where I found myself obsessively reprogramming and reimagining all of my input devices, as well as iterating my workflow to optimize all ten fingers and every inch of monitor space, I realized I was far more interested in solving interface and usability problems than I was color grading and culling.
+  <br>Denver-based UX/UI designer with a passion for solving problems and a flare for visual design. <br><br>I became interested in UX/UI during my time as a video and photo processor; when my focus on the  productivity of my creative software brought me to a point where I found myself obsessively reprogramming and reimagining all of my input devices, as well as iterating my workflow to optimize all ten fingers and every inch of monitor space, I realized I was far more interested in solving interface and usability problems than I was color grading and culling.
   <br><br>
   
       I enrolled in The University of Denver UX/UI Bootcamp and earned my certificate in 2022.
