--- a/mp2.html
+++ b/mp2.html
@@ -36,7 +36,7 @@
         <br><br><h1>MadPlanet Shopping app</h1>
         <br><br>
         <p>
-          During user surveys...
+          During user surveys we discovered that almost all potential users were wary about subscription services. This would present our first UX problem, but the team was eager to sovle it.
 
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             
@@ -45,14 +45,21 @@
       </div>
       <div class="jumbotron">
   <h1 class="display-4">Empathy Phase</h1>
-  <p class="lead">Before we could build a great non-profit site, the first step was to understand who we were designing for. We began our proto-persona by interacting with the original SMT site and gave the proto-persona a demographic profile based on secondary research.
-</p><img src="images/empathize.png" class="empathyimage">
+  <p class="lead">The app began with User Research. First the team devised a survey and invited respondents through our respective social media circles. In our in-person interviews, we had more ablitity to explore users' responses and ended up with a few key takeaways:
+    <br><br>
+    <img src="images/MPquotes.png" class="mpQuotes">
+    <ul>
+
+    <li>Users would almost ALWAYS put a good deal above ethics.</li>
+    <li>Users were wary of subscription and membership models</li>
+    <li>Users felt that quality and durability were implictitly Green because they are made with pride, and are built to last</li>
+    <li>Though apprehensive about memberships, all users interviewed <i>liked</i>  the idea of a co-op where they could pool resources to affect change</li>
+    </ul>
+</p><img src="images/MPpersona.png" class="empathyimage">
 <p class="lead">
-    To begin user research, we cast a wide net and tried to gather as much info as possible. Using a google survey we found useful info about trail users that we could utilize for one-on-one interviews. One very important takeaway from surveying was that users overwhelmingly wanted to give back with both time and money, but often didn’t because they felt disconnected or intimidated
+    We imaged our typical user as a young professional whose money doesn't ever seem to go as far as it should. She tries to make the right decisions, but because there's never enough time and money, she often finds herself supporting businesses that she wishes she didn't.
     <br><br>
-    Being able to ask more nuanced questions, then organizing data through Empathy Mapping, cross-referenced with the existing site, it was clear the website needed mission transparency front and center, and that users would like to see a central focus on sustainability.
-    <br><br>
-    Finally, we could turn our proto-persona from a vague caricature of a user into a believable person with needs, goals, and potential for gains.
+    The only thing Chloe hates worse than finding out a brand she's supported in the past does harm in the world is seeing companies market themselves as Green, even though they do little to actually help.
 </p>
   
 </div>
