--- a/mp4.html
+++ b/mp4.html
@@ -33,50 +33,52 @@
 
   <body>
     <div class="sidebar smtbar">
-        <br><br><h1>Salida Mountain Trails</h1>
-       <img src="images/mainImage.gif" width="250px">
+        <br><br><h1>MadPlanet Mobile Shopping App</h1>
+       <img src="images/interactiongif.gif" width="250px">
            
       </div>
       <div class="jumbotron">
   <h1 class="display-4">Ideate</h1>
-  <p class="lead">Before we could begin wireframing, the information gathered in the Define stage was used to develop user flows for the most integral parts of the site: Getting Involved and Trails. These site modules were certain to be complicated, with circular paths that intersect and branch, so it was important to carefully work through this step.
-
+  <p class="lead">The main revelation coming at the beginning of our Ideate Phase was that we could solve users’ apprehension towards subscriptions and memberships by using a co-op model. MADPlanet could provide consumers resources to enhance their shopping experiences, while simultaneously supporting companies that value ethics. Instead of subscription fees going to pad the pockets of tech-bros, Co-op dues would be pooled to help ethical producers stay competitive and keep the cost of carbon neutral shipping as low as possible.<br><br>
+    The co-op idea was tested in in-person interviews, and warmly received.
+    
 </p>
 <!--cards start -->
 <div class="sm54cards">
 <div class="card" style="width: 18rem;">
-  <img src="images/evo.png" class="card-img-top" alt="...">
+  <img src="images/matrix.png" class="card-img-topMP" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Before and After</h5>
-    <p class="card-text">Breathing new life into a familar design was a important mission in the redesign.</p>
-    <a href="images/evo.png" target="_blank" class="btn btn-primary">Enlarge</a>
+    <h5 class="card-title">Feature Prioritization</h5>
+    <p class="card-text">We learned the best use of team resources was to focus on delightfullness, streamlined User Flows and ways to be totally transparent with users at every step.</p>
+    <a href="images/matrix.png" target="_blank" class="btn btn-primary">Enlarge</a>
   </div>
 </div><div class="card" style="width: 18rem;">
-  <img src="images/involved.png" class="card-img-top" alt="...">
+  <img src="images/mpflow.jpg" class="card-img-topMP" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Refined User Flows</h5>
-    <p class="card-text">All the important steps were redigned and tested to make sure donors could accomplish goals in the most simple way possible.</p>
-    <a href="images/involved.png" target="_blank"class="btn btn-primary">Enlarge</a>
+    <h5 class="card-title">User Flows</h5>
+    <p class="card-text">A shopping app is a huge undertaking with thousands of possible cards and dozens of user paths, so the important flows were carefully mapped.</p>
+    <a href="images/MPflowbig.png" target="_blank"class="btn btn-primary">Enlarge</a>
   </div>
 </div><div class="card" style="width: 18rem;">
-  <img src="images/style.png" class="card-img-top" alt="...">
+  <img src="images/mpstyle.jpg" class="card-img-topMP" alt="...">
   <div class="card-body">
     <h5 class="card-title">Style Tile</h5>
-    <p class="card-text">The team married current color and typopgraphy trends with an outdoorsy feel to re-style the site.</p>
-    <a href="images/style.png" target="_blank"class="btn btn-primary">Enlarge</a>
+    <p class="card-text">Keeping delightfullness and ease of use in mind, the team used large buttons and bright, contemporary colors. The user needs for playfulness and simplicity were carefully balanced to not make the app feel unserious, or toy-like.</p>
+    <a href="images/mpstyle.jpg" target="_blank"class="btn btn-primary">Enlarge</a>
   </div>
   </div>
 </div>
-<p class="lead">To properly include and parse all the existing information in the current site, the team utilized card sorting and site-mapping, then iterated it to better serve the users. The navbar links were distilled from 5 categories to 3 and the redundant links were removed to keep everything streamlined.
-    <br><br>
-    A style guide was formed that incorporated the feel of the original website, with a focus on AA Accessibility and contemporary design aesthetics.
-    The logo was redesigned to better fit the new look and feel.
+<p class="lead"><ul><li>Button location and aesthetics were A/B tested.</li>
+  <li> On-boarding flow was remiagined to remind users the importance of the co-op model. </li>
+  <li>All text and buttons were checked to ensure they met AA accessability standards</li>
+
+</ul>
 </p>
   
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt3.html" role="button"><</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg mainbutt" href="#" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
-  <a class="btn btn-primary btn-lg" href="smt5.html" role="button">></a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="mp3.html" role="button"><</a>
+  <a class="btn btn-primary btn-lg" href="mp2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="mp3.html" role="button">Define</a><a class="btn btn-primary btn-lg mainbutt" href="#" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="mp5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="mp6.html" role="button">Test</a>
+  <a class="btn btn-primary btn-lg" href="mp5.html" role="button">></a>
 </div>
           <div class="footer">
             <div class="copyright">Copyright Andrew Bell 2021</div>
