--- a/mp5.html
+++ b/mp5.html
@@ -32,28 +32,28 @@
 
 
   <body>
-    <div class="sidebar smtbar protobar">
-        <br><br><h1 class="sidebardbg">Salida Mountain Trails</h1>
+    <div class="sidebar smtbar protobarMP">
+        <br><br><h1 class="sidebardbg">MadPlanet Shopping App</h1>
       </div>
 
 
 <div class="jumbotron">
   <h1 class="display-4">Prototype</h1>
   <div class="card pcard">
-    <img src="images/ptype.png" class="card-img-top" alt="...">
+    <img src="images/mpProto.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Final Wireframe</h5>
       <p class="card-text">Though the design was iterated on many times, the final wireframe can be seen here.</p>
-      <a href="https://www.figma.com/file/DShnfpiYoLvGL7691CgLne/SMT-desktop" target="_blank" class="btn btn-primary">Goto Wireframe!</a>
+      <a href="https://www.figma.com/file/A00yn5tfe9RLs0QXM0Fzyv/madPLANET-UI?node-id=34%3A2231" target="_blank" class="btn btn-primary">Goto Wireframe!</a>
     </div></div>
-<p class="lead">Both mobile and browser-based RWD prototypes were built. The prototypes followed the site maps and user flows developed in the Ideate phase that directly confronted the issues discovered in our empathy phase. Prototypes included interactions and overlays to feel intuitive and make the best use of screen real estate.
+<p class="lead">The prototyped followed the user flows developed in the Ideate phase that directly confronted the issues discovered in our empathy phase. Prototypes included interactions and overlays to feel intuitive and make the best use of screen real estate.
 
 </p>
   
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt4.html" role="button"><</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="smt3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg mainbutt" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
-  <a class="btn btn-primary btn-lg" href="smt6.html" role="button">></a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="mp4.html" role="button"><</a>
+  <a class="btn btn-primary btn-lg" href="mp2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="mp3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="mp4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg mainbutt" href="mp5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="mp6.html" role="button">Test</a>
+  <a class="btn btn-primary btn-lg" href="mp6.html" role="button">></a>
 </div>
 
           <div class="footer">
