--- a/mp3.html
+++ b/mp3.html
@@ -33,28 +33,29 @@
 
   <body>
     <div class="sidebar smtbar">
-        <br><br><h1>Salida Mountain Trails</h1>
+        <br><br><h1>MadPlanet Shopping App</h1>
         <br><br>
         <p>
-          It was also abundantly clear that a site can be iterated, improved upon and tested for months, so it was bittersweet to have to pass it off with such a quick turnaround.
+        Users need an easier, less expensive way to shop consciously, and they need to know they can trust the products and information we provide. In the Define Stage, it becomes clear how important it is that we're always postinioning ourselves as being on the users' side.
 
             </p>
            
       </div>
       <div class="jumbotron">
   <h1 class="display-4">Define Phase</h1>
-  <p class="lead">We needed to help users by providing reliable resources and easier ways to support the community they love. This would improve overall experience and further connect users with the people who made it happen.
+  <p class="lead">The principal problem we needed to solve was that she and other users needed a trustworthy, affordable and easy to use way to shop ethically, because even though they place great value on ethical shopping, they ALMOST ALWAYS sacrifice their beliefs for good deals and ease of use. 
+
 <br><h3>Our Problem Statement was central to this plan:</h3>
-</p><img src="images/define.png" class="empathyimage">
+</p><img src="images/MPproblem.jpg" class="empathyimage">
   <hr class="my-4">
   <p class="lead">
-We developed a Journey Map showing users being compelled to get involved through trail usage and a delightful website experience. The Journey map, paired with “How Might We?” questions and quantitative data from interviews and surveys, helped us determine the order and scope of the Get Involved portion of the website.
+We developed a Journey Map showing our persona find out out about the app from a friend she trusts. She is delighted by the charm of the UI, and after working through a carefully worded on-boarding sequence, understands why membership is so important.
 </p>
-  
+<a href="images/MPjourney.png" target="_blank"><img src="images/MPjourney.png" class="makesmall">
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt2.html" role="button"><</a>
-  <a class="btn btn-primary btn-lg" href="smt2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg mainbutt" href="#" role="button">Define</a><a class="btn btn-primary btn-lg" href="smt4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="smt5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="smt6.html" role="button">Test</a>
-  <a class="btn btn-primary btn-lg btn-back" href="smt4.html" role="button">></a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="mp2.html" role="button"><</a>
+  <a class="btn btn-primary btn-lg" href="mp2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg mainbutt" href="#" role="button">Define</a><a class="btn btn-primary btn-lg" href="mp4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="mp5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="mp6.html" role="button">Test</a>
+  <a class="btn btn-primary btn-lg btn-back" href="mp4.html" role="button">></a>
 </div>
           <div class="footer">
             <div class="copyright">Copyright Andrew Bell 2021</div>
