--- a/madplanet.html
+++ b/madplanet.html
@@ -37,7 +37,7 @@
         
         <img src="images/interactiongif.gif" width="250px"><br><br>
         <p class="sidebarcopy">
-          madPLANET learns about users with every interaction, and sources them with the products that match their goals. It follows Consumer's Co-op model, offering low prices on conscious products. 
+          madPLANET learns about users with every interaction, and offers them products that match their goals. It follows a Consumer's Co-op model, offering low prices on conscious products. 
 
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </p>
