--- a/mp2.html
+++ b/mp2.html
@@ -33,7 +33,7 @@
 
   <body>
     <div class="sidebar smtbar">
-        <br><br><h1>MadPlanet Shopping app</h1>
+        <br><br><h1>MadPlanet Shopping App</h1>
         <br><br>
         <p>
           During user surveys we discovered that almost all potential users were wary about subscription services. This would present our first UX problem, but the team was eager to sovle it.
@@ -63,7 +63,7 @@
 </p>
   
 </div>
-<div class="buttonrow"><a class="btn btn-primary btn-lg" href="smt.html" role="button"><</a>
+<div class="buttonrow"><a class="btn btn-primary btn-lg" href="madplanet.html" role="button"><</a>
   <a class="btn btn-primary btn-lg mainbutt" href="mp2.html" role="button">Empathize</a><a class="btn btn-primary btn-lg" href="mp3.html" role="button">Define</a><a class="btn btn-primary btn-lg" href="mp4.html" role="button">Ideate</a><a class="btn btn-primary btn-lg" href="mp5.html" role="button">Prototype</a><a class="btn btn-primary btn-lg" href="mp6.htm" role="button">Test</a>
   <a class="btn btn-primary btn-lg" href="mp3.html" role="button">></a>
 </div>
