--- a/mp4.html
+++ b/mp4.html
@@ -32,10 +32,9 @@
 
 
   <body>
-    <div class="sidebar smtbar">
-        <br><br><h1>MadPlanet Mobile Shopping App</h1>
-       <img src="images/interactiongif.gif" width="250px">
-           
+    <div class="sidebar smtbar ideatebarMP">
+        <br><br><h1>MadPlanet Shopping App</h1>
+       
       </div>
       <div class="jumbotron">
   <h1 class="display-4">Ideate</h1>
