--- a/mp6.html
+++ b/mp6.html
@@ -32,9 +32,10 @@
 
 
   <body>
-    <div class="sidebar smtbar testbarMP">
+    <div class="sidebar smtbar">
         <br><br><h1 class="sidebardbgMP">MadPlanet Mobile Shopping App</h1>
-       
+ 
+           <img src="images/interactiongif.gif" width="250px">
            
       </div>
 
