--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     <a href="index.html"> <img src="images/icon logo 200 px.png" width="100" height="100" class="logo"></a>
     <div class="header-right">
-      <a href="#about">  About  </a>
+      <a href="about.html">  About  </a>
       <a href="mywork.html"> Work  </a>
       <a href="#contact"> Contact </a>
       <a class="active"  href="#skills">Skills</a>
