--- a/mywork.html
+++ b/mywork.html
@@ -38,8 +38,8 @@
 <div class="workContainer">
   <a href="madplanet.html"><div class="workLink3"></div><span><h3 class="blackFont">madPLANET Mobile Shopping App</h1></span></a>
   <a href="smt.html"><div class="workLink1"></div><span><h3 class="blackFont">SMT non-profit Redesign</h1></span></a>
-  <a href="#FCC"><div class="workLink2"></div><span><h3 class="blackFont">FCC Website Redesign</h1></span></a>
-  
+  <!--<a href="#FCC"><div class="workLink2"></div><span><h3 class="blackFont">FCC Website Redesign</h1></span></a>
+  -->
 
 </div>
 <div class="footer">
