--- a/mp2.html
+++ b/mp2.html
@@ -59,7 +59,7 @@
 <p class="lead">
     We imaged our typical user as a young professional whose money doesn't ever seem to go as far as it should. She tries to make the right decisions, but because there's never enough time and money, she often finds herself supporting businesses that she wishes she didn't.
     <br><br>
-    The only thing Chloe hates worse than finding out a brand she's supported in the past does harm in the world is seeing companies market themselves as Green, even though they do little to actually help.
+    The only thing Chloe hates worse than finding out a brand she's supported in the past does harm in the world, is seeing companies market themselves as Green, even though they do little to actually help.
 </p>
   
 </div>
