--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
   <div class="tallimage2"></div>
   <div class="skillscopy"><div class= orangeHeadline>Skills in Practice<br></div>
     <div class="whiteonGray">
-    <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due. And was excited every step of the way, from brainstorming to presentation.
+    <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due, and was excited every step of the way, from brainstorming to presentation.
 <br><br>
     As a photo and video processor, attention to detail and time management was essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
     <br><br>
