--- a/skills.html
+++ b/skills.html
@@ -53,7 +53,7 @@
     <div class="whiteonGray">
     <br>Throughout my professional career I've been laser-focused on doing things right. As a student I was happy to go above and beyond by contacting stakeholders by whatever means necessary and coming up with creative tactics to find good interview candidates. I loved iterating and refining until each and every project was due, and was excited every step of the way, from brainstorming to presentation.
 <br><br>
-    As a photo and video processor, attention to detail and time management was essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
+    As a photo and video processor, attention to detail and time management were essential. Every client expected every single image to be perfect and it didn’t matter that I was handling TENS of THOUSANDS of photos a week, if even a single blink slipped through the cracks, I would hear about it, and quickly learned to never miss a beat.
     <br><br>
     Before my time in the Photography field (and well before I even knew what UX/UI was) I managed a busy restaurant where I learned how important usability was for speed, quality and consistency. I devoted constant attention to the workflow on the Point of Sale systems to be quick and user-friendly, no matter how the menu evolved. I was in frequent communication with the whole staff to source ideas for improvement, and make sure everything worked as they expected with each iteration.
     <br><br><br><br><br><br>
